--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="minecraft Panilla" />
     <meta property="og:description" content="どこから集まったのかよくわからないメンバーが、ぼちぼちデータ配布をしていきます。バニラから少しだけ寄り道をして、もっと楽しめるマイクラを目指しています。いつもと少しだけ違うマイクラで、多くの楽しみを見つけてみてください。" />
     <meta property="og:site_name" content="Panilla" />
-    <meta property="og:image" content="/img/thum.jpg" />
+    <meta property="og:image" content="img/thum.jpg" />
 
-    <link rel="stylesheet" href="/css/uikit.min.css" />
-    <script src="/js/uikit.min.js"></script>
-    <script src="/js/uikit-icons.min.js"></script>
+    <link rel="stylesheet" href="css/uikit.min.css" />
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
     <link rel="icon" href="img/favicon.ico" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHPW9TT8HY"></script>
@@ -38,27 +38,27 @@
         <div class="uk-navbar-center">
           <ul class="uk-navbar-nav">
             <li>
-              <a href="/index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
+              <a href="index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
                 Top
               </a>
             </li>
             <li>
-              <a href="/index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
+              <a href="index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
                 Topics
               </a>
             </li>
             <li>
-              <a href="/index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
+              <a href="index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
                 Download
               </a>
             </li>
             <li>
-              <a href="/index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
+              <a href="index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
                 FAQ
               </a>
             </li>
             <li>
-              <a href="/index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
+              <a href="index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
                 About
               </a>
             </li>
@@ -77,11 +77,11 @@
       <div class="uk-offcanvas-bar">
         <button class="uk-offcanvas-close" type="button" uk-close></button>
         <ul class="uk-nav">
-          <li><a href="/index.html#">TOP</a></li>
-          <li><a href="/index.html#topics">TOPICS</a></li>
-          <li><a href="/index.html#downloads">DOWNLOAD</a></li>
-          <li><a href="/index.html#faq">FAQ</a></li>
-          <li><a href="/index.html#about">ABOUT</a></li>
+          <li><a href="index.html#">TOP</a></li>
+          <li><a href="index.html#topics">TOPICS</a></li>
+          <li><a href="index.html#downloads">DOWNLOAD</a></li>
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#about">ABOUT</a></li>
         </ul>
       </div>
     </div>
@@ -89,8 +89,8 @@
     <div class="uk-margin-left uk-margin-right ">
 
       <div class="">
-        <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(/img/header.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
-          <img data-src="/img/logo.png" width="500vh" uk-img alt="logo-image">
+        <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(img/header.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
+          <img data-src="img/logo.png" width="500vh" uk-img alt="logo-image">
         </div>
       </div>
 
@@ -138,9 +138,9 @@
 
           <ul class="uk-slider-items uk-grid">
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
+              <a href="contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
-                  <img src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
+                  <img src="img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
                     <h3 class="uk-margin-remove uk-visible@s">DENDENS APEX DATAPACKS OPENBETA</h3>
                     <p class="uk-margin-remove">APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。</p>
@@ -149,9 +149,9 @@
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
+              <a href="contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
-                  <img src="/img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
+                  <img src="img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
                     <h3 class="uk-margin-remove uk-visible@s">DENDEN'S COMPASS VER.2.0</h3>
                     <p class="uk-margin-remove">画面上に方角を表示させるデータパックです。</p>
@@ -160,9 +160,9 @@
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
+              <a href="contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
-                  <img src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
+                  <img src="img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
                     <h3 class="uk-margin-remove uk-visible@s">DENDENS APEX DATAPACKS OPENBETA</h3>
                     <p class="uk-margin-remove">APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。</p>
@@ -171,9 +171,9 @@
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
+              <a href="contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
-                  <img src="/img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
+                  <img src="img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
                     <h3 class="uk-margin-remove uk-visible@s">DENDEN'S COMPASS VER.2.0</h3>
                     <p class="uk-margin-remove">画面上に方角を表示させるデータパックです。</p>
@@ -188,44 +188,7 @@
       
         </div>
       </div>
-      <!-- <div class="uk-container uk-width-4-5@m uk-margin-top">
-        <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-child-width-1-7@s uk-margin" uk-grid>
-          <div class="uk-card-media-left uk-cover-container uk-width-1-5@xl">
-            <img src="/img/dendens_apex_datapack/apexHeaderHorizon.png" alt="" uk-cover>
-          </div>
-          <div class="uk-width-expand@xl">
-            <div class="uk-card-body">
-              <h3 class="uk-card-title">DENDENS APEX DATAPACKS OPENBETA</h3>
-              <p>APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。</p>
-            </div>
-          </div>
-        </a>
-        <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-child-width-1-7@s uk-margin" uk-grid>
-          <div class="uk-width-expand@xl">
-            <div class="uk-card-body">
-              <h3 class="uk-card-title">DENDEN'S COMPASS VER.2.0</h3>
-              <p>画面上に方角を表示させるデータパックです</p>
-            </div>
-          </div>
-          <div class="uk-card-media-left uk-cover-container uk-width-1-5@xl">
-            <img src="/img/dendens_Compass_Resources/compass_top.jpg" alt="" uk-cover>
-          </div>
-        </a>
-      </div> -->
 
-<!--
-      <a name="donation"></a>
-      <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-        Donation
-      </div>
-      <div class="uk-flex uk-flex-center">
-        <div class="uk-container uk-width-4-5@m">
-          <div class="uk-card-body uk-card-default uk-width-1-1">
-            ここに内容
-          </div>
-        </div>
-      </div>
--->
       <a name="faq"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         FAQ
@@ -270,7 +233,7 @@
               Q4. 著作権関係について知りたい
             </a>
             <div class="uk-accordion-content">
-              <p>A4. <a href="/attention.html#copyright">こちら</a>のページをご覧ください。</p>
+              <p>A4. <a href="attention.html#copyright">こちら</a>のページをご覧ください。</p>
             </div>
           </li>
         </ul>
@@ -283,9 +246,9 @@
       </div>
       <div >
         <div class="uk-child-width-expand@s uk-flex uk-flex-center" uk-grid>
-          <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle uk-card-hover " href="/project.html" uk-grid>
+          <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle uk-card-hover " href="project.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-              <img src="/img/logo.png" alt="about_logo" uk-cover>
+              <img src="img/logo.png" alt="about_logo" uk-cover>
               <canvas width="200" height="200"></canvas>
             </div>
             <div>
@@ -294,9 +257,9 @@
               </div>
             </div>
           </a>
-          <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle uk-card-hover " href="/member.html" uk-grid>
+          <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle uk-card-hover " href="member.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container uk-card-large">
-              <img src="/img/header.jpg" alt="about_top" uk-cover>
+              <img src="img/header.jpg" alt="about_top" uk-cover>
               <canvas width="200" height="200"></canvas>
             </div>
             <div>
@@ -323,7 +286,7 @@
         </div>
     </div>
     <div class="uk-flex uk-flex-center uk-margin-top">
-      <a href="./attention.html">利用規約</a>
+      <a href="attention.html">利用規約</a>
     </div>
 
     <hr>
