--- a/member.html
+++ b/member.html
@@ -4,10 +4,10 @@
     <title>Panilla members!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/uikit.min.css" />
-    <script src="/js/uikit.min.js"></script>
-    <script src="/js/uikit-icons.min.js"></script>
-    <link rel="icon" href="/img/favicon.ico" />
+    <link rel="stylesheet" href="css/uikit.min.css" />
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
+    <link rel="icon" href="img/favicon.ico" />
   </head>
   <body>
 
@@ -16,27 +16,27 @@
         <div class="uk-navbar-center">
           <ul class="uk-navbar-nav">
             <li>
-              <a href="/index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
+              <a href="index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
                 Top
               </a>
             </li>
             <li>
-              <a href="/index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
+              <a href="index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
                 Topics
               </a>
             </li>
             <li>
-              <a href="/index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
+              <a href="index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
                 Download
               </a>
             </li>
             <li>
-              <a href="/index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
+              <a href="index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
                 FAQ
               </a>
             </li>
             <li>
-              <a href="/index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
+              <a href="index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
                 About
               </a>
             </li>
@@ -55,11 +55,11 @@
       <div class="uk-offcanvas-bar">
         <button class="uk-offcanvas-close" type="button" uk-close></button>
         <ul class="uk-nav">
-          <li><a href="/index.html#">TOP</a></li>
-          <li><a href="/index.html#topics">TOPICS</a></li>
-          <li><a href="/index.html#downloads">DOWNLOAD</a></li>
-          <li><a href="/index.html#faq">FAQ</a></li>
-          <li><a href="/index.html#about">ABOUT</a></li>
+          <li><a href="index.html#">TOP</a></li>
+          <li><a href="index.html#topics">TOPICS</a></li>
+          <li><a href="index.html#downloads">DOWNLOAD</a></li>
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#about">ABOUT</a></li>
         </ul>
       </div>
     </div>
@@ -86,7 +86,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="/img/member/denden.png" alt="p_denden">
+                <img src="img/member/denden.png" alt="p_denden">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">でんでん</h3>
@@ -138,7 +138,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="/img/member/tks.png" alt="p_tks">
+                <img src="img/member/tks.png" alt="p_tks">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">tks</h3>
