--- a/contents/dendens_v1_datapack.html
+++ b/contents/dendens_v1_datapack.html
@@ -102,14 +102,10 @@
                 <div class="uk-width-1-4@m">
                   <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
-                        <img data-src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
-                        <a href="/dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
+                        <img data-src="/img/dendens_v1_datapack/V1.png" width="500" alt="dendens_v1_detapack_thumnal" uk-img><br>
+                        <a href="/dist/dendens_v1_datapacks/V1.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                             dendens apex datapacks openBeta
-                        </a><br>
-                        <a href="/dist/dendens_apex_datapacks/dendens_apex_resourcepack.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
-                            <span uk-icon="icon: cloud-download"></span>
-                             dendens apex resourcepack
+                             dendens v1 datapacks openAlpha
                         </a><br>
                     </div>
                 </div>
