--- a/contents/dendens_v1_datapack.html
+++ b/contents/dendens_v1_datapack.html
@@ -75,7 +75,7 @@
 
     <div class="uk-margin-left uk-margin-right">
         <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-            DENDENS APEX DATAPACKS OPENBETA
+            DENDENS V1 DATAPACKS OPENALPHA
         </div>
         <div class="">
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
