--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
+              <a href="contents/dendens_v1_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
-                  <img src="img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
+                  <img src="img/dendens_v1_datapack/V1.png" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                    <h3 class="uk-margin-remove uk-visible@s">DENDENS APEX DATAPACKS OPENBETA</h3>
-                    <p class="uk-margin-remove">APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。</p>
+                    <h3 class="uk-margin-remove uk-visible@s">DENDENS V1 DATAPACKS OPENALPHA</h3>
+                    <p class="uk-margin-remove">のぞいて放て！V1ロケット！（Open α版）</p>
                   </div>
                 </div>
               </a>
             </li>
-            <li class="uk-width-3-4">
+<!--             <li class="uk-width-3-4">
               <a href="contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
                   <img src="img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
@@ -180,7 +180,7 @@
                   </div>
                 </div>
               </a>
-            </li>
+            </li> -->
           </ul>
       
           <a class="uk-position-center-left uk-position-small uk-hidden-hover" href uk-slidenav-previous uk-slider-item="previous"></a>
