--- a/topics.html
+++ b/topics.html
@@ -95,11 +95,19 @@
           <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top" id="content">
             <div class="uk-card-body">
               <div class="uk-card-title">
+                dendens apex datapacks 更新 <nobr class="uk-text-meta">2024-02-26</nobr>
+              </div>
+              でんでんが制作したデータパック「dendens apex datapacks」の不具合を修正！ <br>
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
                 dendens v1 datapacks 配布 <nobr class="uk-text-meta">2023-12-30</nobr>
               </div>
               でんでんが制作したデータパック「dendens v1 datapacks」が配布開始！ <br>
             </div>
-          </div>        
+          </div>
           <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
             <div class="uk-card-body">
               <div class="uk-card-title">
