--- a/contents/dendens_apex_datapack.html
+++ b/contents/dendens_apex_datapack.html
@@ -81,7 +81,7 @@
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
                 
                 <div class="uk-container uk-width-3-4@m uk-card-body uk-card-default">
-                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.19.4</span><br>
+                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.18.x</span><span class="uk-badge">Version 1.19.x</span><br><span class="uk-badge">Version 1.20.x</span><br><br>
                   <a href="#dllink" class="uk-hidden@m">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
@@ -206,6 +206,14 @@
                             </li>
                         </ul>
                     </ul>
+                    <dl class="uk-description-list uk-description-list-divider">
+                        <dt>chage log</dt>
+                        <dt>・ver.1.1</dt>
+                        <dd>
+                            アーマースタンドのアイコンがうまく表示されない不具合を修正しました。
+                            対応バージョンを変更(1.18.4～1.20.4)
+                        </dd>
+                    </dl>
                     <div class="uk-text-center">
                         ●遊んでみた感想お待ちしています <br>
                         でんでんのTwitterまで！ <br>
