--- a/topics.html
+++ b/topics.html
@@ -97,7 +97,7 @@
               <div class="uk-card-title">
                 dendens apex datapacks 更新 <nobr class="uk-text-meta">2024-02-26</nobr>
               </div>
-              でんでんが制作したデータパック「dendens apex datapacks」の不具合を修正！ <br>
+              でんでんが制作したデータパック「dendens apex datapacks」の更新！ <br>
             </div>
           </div>
           <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
