--- a/contents/dendens_apex_datapack.html
+++ b/contents/dendens_apex_datapack.html
@@ -81,7 +81,7 @@
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
                 
                 <div class="uk-container uk-width-3-4@m uk-card-body uk-card-default">
-                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.18.x</span><span class="uk-badge">Version 1.19.x</span><br><span class="uk-badge">Version 1.20.x</span><br><br>
+                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.18.x</span><span class="uk-badge">Version 1.19.x</span><span class="uk-badge">Version 1.20.x</span><br><br>
                   <a href="#dllink" class="uk-hidden@m">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
