--- a/contents/dendens_monbo_datapack.html
+++ b/contents/dendens_monbo_datapack.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="minecraft Panilla | DENDENS MONBO DATAPACKS ALPHA" />
     <meta property="og:description" content="denden's monbo datapack　α版" />
     <meta property="og:site_name" content="Panilla | DENDENS MONBO DATAPACKS ALPHA" />
-    <meta property="og:image" content="https://www.minecraftpanilla.com/img/dendens_monbo_datapack/thumb.png" />
+    <meta property="og:image" content="https://www.minecraftpanilla.com/img/dendens_monbo_datapack/test512.png" />
 
     <link rel="stylesheet" href="/css/uikit.min.css" />
     <script src="/js/uikit.min.js"></script>
@@ -103,8 +103,8 @@
                 <div class="uk-width-1-4@m">
                   <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
-                        <img data-src="/img/dendens_monbo_datapack/V1.png" width="500" alt="dendens_monbo_datapack_thumnal" uk-img><br>
-                        <a href="/dist/dendens_monbo_datapack/V1.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
+                        <img data-src="/img/dendens_monbo_datapack/test512.png" width="500" alt="dendens_monbo_datapack_thumnal" uk-img><br>
+                        <a href="/dist/dendens_monbo_datapack/test512.png" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
                              denden's monbo datapack　α版
                         </a><br>
