--- a/contents/dendens_monbo_datapack.html
+++ b/contents/dendens_monbo_datapack.html
@@ -104,7 +104,7 @@
                   <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
                         <img data-src="/img/dendens_monbo_datapack/test512.png" width="500" alt="dendens_monbo_datapack_thumnal" uk-img><br>
-                        <a href="/dist/dendens_monbo_datapack/test512.png" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
+                        <a href="/dist/dendens_monbo_datapack/monbo.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
                              denden's monbo datapack　α版
                         </a><br>
