--- a/contents/dendens_monbo_datapack.html
+++ b/contents/dendens_monbo_datapack.html
@@ -75,13 +75,13 @@
 
     <div class="uk-margin-left uk-margin-right">
         <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-            DENDENS V1 DATAPACKS OPENALPHA
+            DENDENS V1 DATAPACKS ALPHA
         </div>
         <div class="">
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
                 
                 <div class="uk-container uk-width-3-4@m uk-card-body uk-card-default">
-                  <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.20.4</span><br>
+                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.20.4</span><br>
                   <a href="#dllink" class="uk-hidden@m">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
@@ -106,7 +106,11 @@
                         <img data-src="/img/dendens_monbo_datapack/test512.png" width="500" alt="dendens_monbo_datapack_thumnal" uk-img><br>
                         <a href="/dist/dendens_monbo_datapack/monbo.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                             denden's monbo datapack　α版
+                             DENDENS V1 DATAPACKS ALPHA
+                        </a><br>
+                        <a href="/dist/dendens_monbo_datapack/monbo_resourcepack.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
+                            <span uk-icon="icon: cloud-download"></span>
+                             dendens monbo resourcepack
                         </a><br>
                     </div>
                 </div>
