--- a/contents/dendens_monbo_datapack.html
+++ b/contents/dendens_monbo_datapack.html
@@ -75,7 +75,7 @@
 
     <div class="uk-margin-left uk-margin-right">
         <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-            DENDENS V1 DATAPACKS ALPHA
+            DENDENS MONBO DATAPACKS ALPHA
         </div>
         <div class="">
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
@@ -106,7 +106,7 @@
                         <img data-src="/img/dendens_monbo_datapack/test512.png" width="500" alt="dendens_monbo_datapack_thumnal" uk-img><br>
                         <a href="/dist/dendens_monbo_datapack/monbo.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                             DENDENS V1 DATAPACKS ALPHA
+                             DENDENS MONBO DATAPACKS ALPHA
                         </a><br>
                         <a href="/dist/dendens_monbo_datapack/monbo_resourcepack.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
