--- a/topics.html
+++ b/topics.html
@@ -95,6 +95,14 @@
           <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top" id="content">
             <div class="uk-card-body">
               <div class="uk-card-title">
+                dendens monbo datapacks α 配布 <nobr class="uk-text-meta">2024-02-26</nobr>
+              </div>
+              でんでんが制作したデータパック「dendens monbo datapacks α」が配布開始！ <br>
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
                 dendens apex datapacks 更新 <nobr class="uk-text-meta">2024-02-26</nobr>
               </div>
               でんでんが制作したデータパック「dendens apex datapacks」の更新！ <br>
