--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
 
           <ul class="uk-slider-items uk-grid">
             <li class="uk-width-3-4">
+              <a href="contents/dendens_monbo_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
+                <div class="uk-panel">
+                  <img src="img/dendens_monbo_datapack/monbo.png" width="1800" height="1200" alt="">
+                  <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+                    <h3 class="uk-margin-remove uk-visible@s">DENDENS MONBO DATAPACKS ALPHA</h3>
+                    <p class="uk-margin-remove">MOBを捕まえることができるデータパックです。</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="uk-width-3-4">
               <a href="contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
                   <img src="img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
